--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -7,13 +7,18 @@
 <body>
     <%- include('../partials/navbar') %>
 
-    <h1 class="product-title"><%= product.title %></h1>
-    <img src="<%= product.picture %>" alt="<%= product.title %>" class="product-image">
-    <h4 class="product-amount"><%= product.amount %></h4>
-    <p class="product-description"><%= product.description %></p>
+    <div class="container product-detail">
+        <div>
+            <h1 class="product-title"><%= product.title %></h1>
+            <h4 class="product-amount">$<%= product.amount %></h4>
+            <p class="product-description"><%= product.description %></p>
+        
+            <form action="/cart" method="POST">
+                <button type="submit">Add to Cart</button>
+            </form>
+        </div>
 
-    <form action="/cart" method="POST">
-        <button type="submit">Add to Cart</button>
-    </form>
+        <img src="<%= product.picture %>" alt="<%= product.title %>" class="product-image">
+    </div>
 </body>
 </html>
