--- a/views/admin/list-product.ejs
+++ b/views/admin/list-product.ejs
@@ -26,7 +26,7 @@
                             <p class="card-description"><%= product.description %></p>
 
                             <div class="grid-2">
-                                <a href="#" class="link-product">
+                                <a href="/admin/edit-product/<%= product.id %>" class="link-product">
                                     <p>Edit</p>
                                 </a>
                                 <form action="#" method="POST">
