Add delete feature functionality

--- a/views/admin/list-product.ejs
+++ b/views/admin/list-product.ejs
@@ -29,7 +29,7 @@
                                 <a href="/admin/edit-product/<%= product.id %>" class="link-product">
                                     <p>Edit</p>
                                 </a>
-                                <form action="#" method="POST">
+                                <form action="/admin/delete-product/<%= product.id %>" method="POST">
                                     <button type="submit">Delete</button>
                                 </form>
                             </div>
