--- a/views/shop/list-product.ejs
+++ b/views/shop/list-product.ejs
@@ -26,7 +26,7 @@
                             <p class="card-description"><%= product.description %></p>
                             <div class="grid-2">
                                 <a href="/products/<%= product.id %>" class="link-product">Details</a>
-                                <form action="#" method="POST">
+                                <form action="/post-cart/<%= product.id %>?currentPage=productList" method="POST">
                                     <button type="submit">Add to Cart</button>
                                 </form>
                             </div>
