--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -13,7 +13,7 @@
             <h4 class="product-amount">$<%= product.amount %></h4>
             <p class="product-description"><%= product.description %></p>
         
-            <form action="/cart" method="POST">
+            <form action="/post-cart/<%= product.id %>?currentPage=productDetail" method="POST">
                 <button type="submit">Add to Cart</button>
             </form>
         </div>
