--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -59,3 +59,19 @@
     display: flex;
     gap: 60px;
 }
+
+.info-display button {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
+.info-display i {
+    transform: scale(1.5);
+}
+
+.info-display button:hover i {
+    color: rgb(73, 73, 73);
+}
