--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <%- include('../partials/headers') %>
+    <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/cart.css">
 </head>
@@ -32,6 +39,13 @@
                                 <h6>TOTAL PRICE</h6>
                                 <h2>$<%= cart_item.quantity * cart_item.product.amount %></h2>
                             </div>
+                        </div>
+                        <div class="info-display">
+                            <form action="/delete-cart/<%= cart_item.product.id %>" method="POST">
+                                <button type="submit">
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
+                            </form>
                         </div>
                     </div>
                 <% } %>
