--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,11 +54,17 @@ nav ul {
 
 .product-description {
     font-size: 1.2rem;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+}
+
+.product-detail .controls {
+    width: 80%;
+    display: flex;
+    gap: 10px;
 }
 
 .product-detail button {
-    width: 80%;
+    width: 100%;
     height: 40px;
     font-size: 1.1rem;
     background-color: rgb(86, 0, 129);
@@ -75,4 +81,8 @@ nav ul {
     height: 450px;
     width: 600px;
     object-fit: contain;
+}
+
+.product-instances-in-cart {
+    margin-bottom: 15px;
 }
