--- a/views/shop/list-product.ejs
+++ b/views/shop/list-product.ejs
@@ -27,7 +27,7 @@
                             <div class="grid-2">
                                 <a href="/products/<%= product.id %>" class="link-product">Details</a>
                                 <form action="/post-cart/<%= product.id %>?currentPage=productList" method="POST">
-                                    <button type="submit">Add to Cart</button>
+                                    <button type="submit" name="action" value="add">Add to Cart</button>
                                 </form>
                             </div>
                         </div>
