--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -70,6 +70,9 @@
                                 <h2>$<%= grossAmount %></h2>
                             </div>
                         </div>
+                        <a href="/checkout" class="btn">
+                            <p>Checkout</p>
+                        </a>
                     </div>
                 </div>
             </div>
