--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -86,6 +86,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
+    cursor: pointer;
 }
 
 .btn:hover {
