--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -55,9 +55,9 @@
                             <h2>$<%= grossAmount %></h2>
                         </div>
                     </div>
-                    <a href="/place-order" class="btn">
-                        <p>Place Order</p>
-                    </a>
+                    <form action="/place-order" method="POST">
+                        <button type="submit" class="btn">Place Order</button>
+                    </form>
                 </div>
             </div>
         </div>
