--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,6 +3,7 @@
         <li><a href="/" class="<%= activePage === 'Shop' ? 'nav-active' : '' %>">Shop</a></li>
         <li><a href="/products" class="<%= activePage === 'Products' ? 'nav-active' : '' %>">Products</a></li>
         <li><a href="/cart" class="<%= activePage === 'Cart' ? 'nav-active' : '' %>">Cart</a></li>
+        <li><a href="/orders" class="<%= activePage === 'Orders' ? 'nav-active' : ''%>">Orders</a></li>
         <li><a href="/admin/add-product" class="<%= activePage === 'Add Product' ? 'nav-active' : '' %>">Add Product</a></li>
         <li><a href="/admin/products" class="<%= activePage === 'Admin Products' ? 'nav-active' : '' %>">List Products</a></li>
     </ul>
