Add cart edit functionality with mongodb

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -31,13 +31,13 @@
                         <div class="info-display">
                             <div>
                                 <h6>QUANTITY</h6>
-                                <h2><%= product.cartitem.quantity %></h2>
+                                <h2><%= product.quantity %></h2>
                             </div>
                         </div>
                         <div class="info-display">
                             <div>
                                 <h6>TOTAL PRICE</h6>
-                                <h2>$<%= product.cartitem.quantity * product.amount %></h2>
+                                <h2>$<%= product.quantity * product.amount %></h2>
                             </div>
                         </div>
                         <div class="info-display">
