Add delete function of cart in mongodb

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="info-display">
-                            <form action="/delete-cart/<%= product.id %>" method="POST">
+                            <form action="/delete-cart/<%= product._id %>" method="POST">
                                 <button type="submit">
                                     <i class="fa-solid fa-trash"></i>
                                 </button>
