--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,11 @@
         <li><a href="/products" class="<%= activePage === 'Products' ? 'nav-active' : '' %>">Products</a></li>
         <li><a href="/cart" class="<%= activePage === 'Cart' ? 'nav-active' : '' %>">Cart</a></li>
         <li><a href="/orders" class="<%= activePage === 'Orders' ? 'nav-active' : ''%>">Orders</a></li>
-        <li><a href="/admin/add-product" class="<%= activePage === 'Add Product' ? 'nav-active' : '' %>">Add Product</a></li>
-        <li><a href="/admin/products" class="<%= activePage === 'Admin Products' ? 'nav-active' : '' %>">List Products</a></li>
+        <!-- <li><a href="/admin/add-product" class="<%= activePage === 'Add Product' ? 'nav-active' : '' %>">Add Product</a></li> -->
+        <!-- <li><a href="/admin/products" class="<%= activePage === 'Admin Products' ? 'nav-active' : '' %>">List Products</a></li> -->
+    </ul>
+
+    <ul>
+        <li><a href="/login" class="<%= activePage === 'Login' ? 'nav-active' : '' %>">Login</a></li>
     </ul>
 </nav>
