Manage login and display parts based on logged in user

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,11 +4,18 @@
         <li><a href="/products" class="<%= activePage === 'Products' ? 'nav-active' : '' %>">Products</a></li>
         <li><a href="/cart" class="<%= activePage === 'Cart' ? 'nav-active' : '' %>">Cart</a></li>
         <li><a href="/orders" class="<%= activePage === 'Orders' ? 'nav-active' : ''%>">Orders</a></li>
-        <!-- <li><a href="/admin/add-product" class="<%= activePage === 'Add Product' ? 'nav-active' : '' %>">Add Product</a></li> -->
-        <!-- <li><a href="/admin/products" class="<%= activePage === 'Admin Products' ? 'nav-active' : '' %>">List Products</a></li> -->
+
+        <% if(isAuthenticated === true && isAdminUser === true) { %>
+            <li><a href="/admin/add-product" class="<%= activePage === 'Add Product' ? 'nav-active' : '' %>">Add Product</a></li>
+            <li><a href="/admin/products" class="<%= activePage === 'Admin Products' ? 'nav-active' : '' %>">List Products</a></li>
+        <% } %>
     </ul>
 
     <ul>
-        <li><a href="/login" class="<%= activePage === 'Login' ? 'nav-active' : '' %>">Login</a></li>
+        <% if(isAuthenticated === false) { %>
+            <li><a href="/login" class="<%= activePage === 'Login' ? 'nav-active' : '' %>">Login</a></li>
+        <% } else { %>
+            <li><a href="#"><%= loggedInUsername %></a></li>
+        <% } %>
     </ul>
 </nav>
