--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -15,7 +15,9 @@
 <body>
     <%- include('../partials/navbar') %>
     <div class="container">
-        <% if(cart.length === 0) { %>
+        <% if(isAuthenticated === false) { %>
+            <h2>You need to be logged in to access Cart</h2>
+        <% } else if(cart.length === 0) { %>
             <h2>No Products in Cart to Display</h2>
         <% } else { %>
             <div class="cart-items">
