--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -11,12 +11,12 @@
     <div class="container">
         <form action="/login" method="POST">
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" required>
             </div>
 
             <button type="submit">Login</button>
