--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -9,7 +9,7 @@
     <%- include('../partials/navbar') %>
 
     <div class="container">
-        <form action="/login" method="POST">
+        <form action="/login" method="POST" class="product-form">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" required>
