--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,6 +16,11 @@
             <li><a href="/login" class="<%= activePage === 'Login' ? 'nav-active' : '' %>">Login</a></li>
         <% } else { %>
             <li><a href="#"><%= loggedInUsername %></a></li>
+            <li>
+                <form action="/logout" method="POST">
+                    <button type="submit" id="logout">Logout</button>
+                </form>
+            </li>
         <% } %>
     </ul>
 </nav>
