--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -5,12 +5,12 @@
     margin-bottom: 20px;
 }
 
-label {
+.product-form label {
     font-size: 18px;
     font-weight: 700;
 }
 
-input {
+.product-form input {
     width: 500px;
     height: 30px;
     font-size: 18px;
@@ -19,11 +19,11 @@ input {
     padding: 0px 10px;
 }
 
-input:focus {
+.product-form input:focus {
     border: 1.5px solid rgb(0, 0, 0);
 }
 
-textarea {
+.product-form textarea {
     width: 500px;
     height: 100px;
     font-size: 18px;
@@ -32,15 +32,15 @@ textarea {
     padding: 10px 10px;
 }
 
-textarea:focus {
+.product-form textarea:focus {
     border: 1.5px solid rgb(0, 0, 0);
 }
 
-form {
+.product-form {
     margin-top: 30px;
 }
 
-button {
+.product-form button {
     font-size: 18px;
     padding: 10px 25px;
     background-color: rgb(86, 0, 129);
@@ -50,6 +50,6 @@ button {
     margin-top: 10px;
 }
 
-button:hover {
+.product-form button:hover {
     background-color: rgb(123, 1, 184);
 }
