--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,3 +84,18 @@ nav li {
 .product-instances-in-cart {
     margin-bottom: 15px;
 }
+
+#logout {
+    color: rgb(211, 211, 211);
+    font-size: 18px;
+    font-family: serif;
+    width: 100%;
+    height: 30px;
+    background-color: rgb(86, 0, 129);
+    border: none;
+    cursor: pointer;
+}
+
+#logout:hover {
+    background-color: rgb(86, 0, 129);
+}
